--- a/printer.cfg
+++ b/printer.cfg
@@ -55,7 +55,7 @@ step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 microsteps: 32
-rotation_distance: 6.0
+rotation_distance: 7.92
 #max_extrude_cross_section:
 #   Maximum area (in mm^2) of an extrusion cross section (eg,
 #   extrusion width multiplied by layer height). This setting prevents
@@ -63,12 +63,24 @@ rotation_distance: 6.0
 #   If a move requests an extrusion rate that would exceed this value
 #   it will cause an error to be returned. The default is: 4.0 *
 #   nozzle_diameter^2
-#max_extrude_only_distance: 100.0 #add this line to your extruder section
+max_extrude_only_distance: 500.0
+#Maximum length (in mm of raw filament) that a retraction or
+#extrude-only move may have. If a retraction or extrude-only move
+#requests a distance greater than this value it will cause an error
+#to be returned. The default is 50mm.
 max_extrude_only_velocity: 50
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
-pressure_advance = 0.285
+max_extrude_cross_section: 50
+#pressure_advance = 0.285
 #pressure_advance = <start> + <measured_height> * <factor>
+#SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY=1 ACCEL=500
+
+#For long bowden extruders use:
+#TUNING_TOWER COMMAND=SET_PRESSURE_ADVANCE PARAMETER=ADVANCE START=0 FACTOR=.020
+
+#For printers with a direct drive extruder run the command:
+#TUNING_TOWER COMMAND=SET_PRESSURE_ADVANCE PARAMETER=ADVANCE START=0 FACTOR=.005
 
 nozzle_diameter: 0.400
 filament_diameter: 1.750
@@ -87,16 +99,23 @@ max_temp: 260
 
 [extruder1]
 step_pin: P1.9
-dir_pin: P1.14
+dir_pin: !P1.14
 enable_pin: !P0.10
 microsteps: 32
-rotation_distance: 6.0
-max_extrude_only_velocity: 50
+rotation_distance: 33.683
+max_extrude_only_velocity: 70
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
+max_extrude_cross_section: 50
+max_extrude_only_distance: 500.0
+
+#pressure_advance = 0.285
+#pressure_advance = <start> + <measured_height> * <factor>
+
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 shared_heater: extruder
+
 #sensor_type: EPCOS 100K B57560G104F
 #heater_pin: P2.6
 #sensor_pin: P0.25
@@ -235,8 +254,8 @@ runout_gcode:
     PARK_MACRO
     M117 Out of Filament
     M300
-insert_gcode:
-    #T0
+#insert_gcode:
+    ACTIVATE_EXTRUDER EXTRUDER=extruder
     LOAD_FILAMENT
     PURGE
     M117 Resuming
@@ -263,8 +282,8 @@ runout_gcode:
     M600 #calls a macro with the name M600 (so it can be called by slicers too)
     PARK_MACRO
     M117 Out of Filament
-insert_gcode:
-    #T1
+#insert_gcode:
+    ACTIVATE_EXTRUDER EXTRUDER=extruder1
     LOAD_FILAMENT
     PURGE
     M117 Resuming
@@ -369,7 +388,7 @@ probe_count: 3, 3
 
 [gcode_macro START_PRINT]
 gcode:
-    M302
+    M302;
     G90;
     G28;
     BED_MESH_PROFILE LOAD=default
@@ -386,11 +405,11 @@ gcode:
     # Move the nozzle near the bed
     # Move the nozzle very close to the bed
     G92 E0 ;Reset Extruder
-    G1 Z2.0 F3000 ;Move Z Axis up
+    G1 E50 Z2 F1000;Move Z Axis up
     G1 X10.1 Y10 Z0.28 F5000.0 ;Move to start position
-    G1 X10.1 Y120.0 F1500.0 E25 ;Draw the first line
+    G1 X10.1 Y120.0 F1500.0 E50 ;Draw the first line
     G1 X10.4 Y120.0 F5000.0 ;Move to side a little
-    G1 X10.4 Y20 F1500.0 E45 ;Draw the second line
+    G1 X10.4 Y20 F1500.0 E70 ;Draw the second line
     #G92 E0 ;Reset Extruder
     # Wait for bed to reach temperature
     #M190 S{BED_TEMP}
@@ -405,8 +424,9 @@ gcode:
     M106 S0
     # Move nozzle away from print while retracting
     G91;Relative positioning
+    G1 E-3.14 F1500
     G1 E-50 Z2 F1000 ;Retract and raise Z
-    #G1 E-50 F1000
+    G1 E-50 F1000
     G1 X5 Y5 F3000 ;Wipe out
     M300
     G1 Z5 ;Raise Z more
@@ -434,7 +454,7 @@ gcode:
   G1 E5.0 F1200
   G1 E3.0 F1600
   G1 E-13.14 F2000
-  G1 E-30 F2000 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
+  G1 E-40 F2000 #This is a partial unload for the E5, but you need to adjust the default setting for max extrusion from 50
   G1 E-50 F2000
   G90
   
@@ -443,7 +463,6 @@ gcode:
   PAUSE_MACRO
   UNLOAD
   
-
 [gcode_macro PAUSE_MACRO]
 gcode:
   PAUSE
@@ -461,10 +480,10 @@ gcode:
 gcode:
   M117  LOADING...
   G91
-  G1 E25.0 F500
+  G1 E5.0 F500
   #G1 E100 F250
   G4 P900
-  G1 E30.0 F250
+  G1 E50.0 F250
   G1 E50.0 F250
   G90
 
@@ -474,6 +493,7 @@ gcode:
   RESUME
   
 [gcode_macro M300]
+#print Finish
 gcode:  SET_PIN PIN=beeper VALUE=1
         G4 P200
         SET_PIN PIN=beeper VALUE=0
@@ -488,16 +508,30 @@ gcode:  SET_PIN PIN=beeper VALUE=1
         G4 P100
         
 [gcode_macro M301]
-gcode:  SET_PIN PIN=beeper VALUE=1
-        G4 P500
+#Filament runout
+gcode:  SET_PIN PIN=beeper VALUE=1;1
+        G4 P1000
         SET_PIN PIN=beeper VALUE=0
         G4 P50
-        SET_PIN PIN=beeper VALUE=1
-        G4 P500
+        SET_PIN PIN=beeper VALUE=1;2
+        G4 P1000
+        SET_PIN PIN=beeper VALUE=0
+        G4 P50
+        SET_PIN PIN=beeper VALUE=1;3
+        G4 P1000
+        SET_PIN PIN=beeper VALUE=0
+        G4 P50
+        SET_PIN PIN=beeper VALUE=1;4
+        G4 P1000
+        SET_PIN PIN=beeper VALUE=0
+        G4 P50
+        SET_PIN PIN=beeper VALUE=1;5
+        G4 P1000
         SET_PIN PIN=beeper VALUE=0
         G4 P50
 
 [gcode_macro M302]
+#print start
 gcode:  SET_PIN PIN=beeper VALUE=1
         G4 P200
         SET_PIN PIN=beeper VALUE=0
@@ -505,11 +539,25 @@ gcode:  SET_PIN PIN=beeper VALUE=1
         
 [gcode_macro T0]
 gcode:
+    #ACTIVATE_EXTRUDER EXTRUDER=extruder1
+    #PAUSE
+    #PARK_MACRO
+    #UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder
+    #LOAD_FILAMENT
+    #PURGE
+    #RESUME_MACRO  
 
 [gcode_macro T1]
 gcode:
+    #ACTIVATE_EXTRUDER EXTRUDER=extruder0
+    #PAUSE
+    #PARK_MACRO
+    #UNLOAD
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
+    #LOAD_FILAMENT
+    #PURGE
+    #RESUME_MACRO
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -517,9 +565,9 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.505000, 0.042500, -0.320000
-#*# 	  0.340000, -0.000000, -0.037500
-#*# 	  0.202500, 0.005000, -0.030000
+#*# 	  0.300000, 0.052500, -0.042500
+#*# 	  0.157500, -0.007500, -0.005000
+#*# 	  0.122500, 0.020000, 0.045000
 #*# tension = 0.2
 #*# min_x = 25.0
 #*# algo = lagrange
@@ -532,4 +580,4 @@ gcode:
 #*# max_x = 180.0
 #*#
 #*# [probe]
-#*# z_offset = 0.100
+#*# z_offset = 0.42
